@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.600 2006/02/20 16:48:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.601 2006/02/20 18:15:17 agaffney Exp $
 
 
   20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
   add code make GLIPortage.py capable of being run stand-along for dynamic
   stage3 generation and copying packages in a GRP-ish way
+  grp code fixups
 
   17 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
